--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
-    "react-useanimations": "^2.10.0"
+    "react-useanimations": "^2.10.0",
+    "shadcn-ui": "^0.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
